2015-02-14  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.9 released.

2015-02-13  Carl Hetherington  <cth@carlh.net>

	* Speculative fix for crash on finding a server which
	may be caused by a failure to disconnect from
	ServerFinder when an Encoder is destroyed.

2015-02-11  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.8 released.

2015-02-04  Carl Hetherington  <cth@carlh.net>

	* Sort image sequences using the numeric part of the
	leaf name, rather than alphanumerically (#469).

	* Version 1.77.7 released.

2015-02-04  Carl Hetherington  <cth@carlh.net>

	* Fix some bad string encodings and another
	no-scale crash (when content is larger than the
	container) (possibly #482).

2015-02-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.6 released.

2015-02-03  Carl Hetherington  <cth@carlh.net>

	* Fix crash on cropping a 1920x1080 content top
	and bottom and then fitting it into a Scope
	container.

2015-01-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.5 released.

2015-01-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.4 released.

2015-01-25  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.3 released.

2015-01-25  Carl Hetherington  <cth@carlh.net>

	* Back-port the in-tree libquickmail from 2.x with
	its fix to prevent the use of VRFY (#477).

2015-01-24  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.2 released.

2015-01-24  Carl Hetherington  <cth@carlh.net>

	* New ru_RU translation from Igor Voytovich.

2015-01-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.77.1 released.

2015-01-23  Carl Hetherington  <cth@carlh.net>

	* Only take the MD5 of the first and last megabyte
	of content files, rather than the whole thing, to speed
	up content examination (#472).

	* Remove option to disable digest for image files.

2015-01-20  Carl Hetherington  <cth@carlh.net>

	* Fix update checker.

	* Scan a whole FFmpeg file if no duration is given
	in its header.

2015-01-20  Carl Hetherington  <cth@carlh.net>
