@@ -1,5 +1,5 @@
 /*
-    Copyright (C) 2012-2014 Carl Hetherington <cth@carlh.net>
+    Copyright (C) 2012-2015 Carl Hetherington <cth@carlh.net>
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -66,8 +66,8 @@ Transcoder::Transcoder (shared_ptr<const Film> f, shared_ptr<Job> j)
 	, _encoder (new Encoder (f, j))
 	, _finishing (false)
 {
-	_player->Video.connect (bind (video_proxy, _encoder, _1, _2));
-	_player->Audio.connect (bind (audio_proxy, _encoder, _1));
+	_player_video_connection = _player->Video.connect (bind (video_proxy, _encoder, _1, _2));
+	_player_audio_connection = _player->Audio.connect (bind (audio_proxy, _encoder, _1));
 }
 
 void
