@@ -1,5 +1,5 @@
 /*
-    Copyright (C) 2013 Carl Hetherington <cth@carlh.net>
+    Copyright (C) 2013-2015 Carl Hetherington <cth@carlh.net>
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -38,4 +38,6 @@ private:
 	wxChoice* _preset_choice;
 	ColourConversionEditor* _editor;
 	bool _setting;
+
+	boost::signals2::scoped_connection _editor_connection;
 };
