@@ -1,5 +1,5 @@
 /*
-    Copyright (C) 2012-2013 Carl Hetherington <cth@carlh.net>
+    Copyright (C) 2012-2015 Carl Hetherington <cth@carlh.net>
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -33,4 +33,7 @@ private:
 	
 	boost::weak_ptr<Film> _film;
 	wxRichTextCtrl* _text;
+
+	boost::signals2::scoped_connection _film_changed_connection;
+	boost::signals2::scoped_connection _film_content_changed_connection;
 };
