@@ -1,5 +1,5 @@
 /*
-    Copyright (C) 2012-2014 Carl Hetherington <cth@carlh.net>
+    Copyright (C) 2012-2015 Carl Hetherington <cth@carlh.net>
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -35,5 +35,6 @@ private:
 	wxStaticText* _frames;
 	wxStaticText* _disk;
 	ThreadedStaticText* _encoded;
-};
 
+	boost::signals2::scoped_connection _encoded_connection;
+};
