@@ -1,5 +1,8 @@
 2015-02-14  Carl Hetherington  <cth@carlh.net>
 
+	* Possibly fix a variety of odd crashes caused by
+	dangling connections to signals.
+
 	* Version 1.77.9 released.
 
 2015-02-13  Carl Hetherington  <cth@carlh.net>
